--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -16,9 +16,10 @@ services:
       - "5000:5000"
     environment:
       MYSQL_HOST: db
-      MYSQL_USER: flaskuser
-      MYSQL_PASSWORD: flaskpass
-      MYSQL_DB: flaskdb
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_DB: ${MYSQL_DB}
+      FRONTEND_ORIGIN: ${FRONTEND_ORIGIN}
     depends_on:
       - db
     networks:
@@ -27,7 +28,7 @@ services:
   db:
     image: mysql:5.7
     environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
+      MYSQL_ROOT_PASSWORD: root1234
       MYSQL_USER: flaskuser
       MYSQL_PASSWORD: flaskpass
       MYSQL_DATABASE: flaskdb
