Mensaje breve explicando el cambio

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,7 @@
 events {}
 
 http {
+ limit_req_zone $binary_remote_addr zone=limitados:10m rate=5r/s;
   upstream backend_servers {
     server backend:5000;
   }
@@ -19,6 +20,7 @@ http {
       proxy_set_header X-Real-IP $remote_addr;
     }
   }
+  
 
   # Redirect HTTP to HTTPS
   server {
